Fix spacing between testing section paragraphs

--- a/styles/cs-meme.css
+++ b/styles/cs-meme.css
@@ -1,5 +1,6 @@
+@charset "UTF-8";
 /* *******************************************
-General settings for this case study article
+General settings for MEME case study
 ******************************************** */
 
 .article-wrap {
@@ -12,13 +13,6 @@ General settings for this case study article
 	max-width: 660px;
 	min-width: 250px;
 	margin: 0px 5%;
-}
-
-h1, h2, h3, h4, h5, h6 {
-	font-family: 'Work Sans', sans-serif;
-	color: #383838;
-	text-align: center;	
-	margin: 0px auto;
 }
 
 p {
@@ -46,7 +40,7 @@ img {
 /* ************************************************************************
 Footer section with "back to top" button, social media, and copyright info 
 ************************************************************************* */
-
+/*
 footer {
 	font-family: 'Open Sans', sans-serif;
 	color: #FFF;
@@ -87,12 +81,12 @@ footer {
 	width: 100%;
 	font-size: 180%;
 	text-align: center;	
-}
+}*/
 
 /* *************************************************************************
 Copyright info & social media links
 ************************************************************************** */
-
+/*
 .footer-bar {
 	background-color: #333333;
 	font-family: 'Open Sans', sans-serif;
@@ -143,12 +137,12 @@ Copyright info & social media links
 .social-button {
 	width: 35px;
 	margin: 0px 11px;
-}
+}*/
 
 /* **************************************************************
 MEDIA QUERIES for FOOTER BAR on MOBILE DEVICES 
 *************************************************************** */
-
+/*
 @media (max-width: 530px) {
 
     .footer-bar {
@@ -204,7 +198,7 @@ MEDIA QUERIES for FOOTER BAR on MOBILE DEVICES
 		padding: 0px 8px;
 		text-decoration: underline;
 	}
-}
+}*/
 
 
 /* *************************************************************************
@@ -788,7 +782,7 @@ SECTION - DESIGN
 
 .impact p {
 	font-family: 'Impact', serif;
-	font-size: 28px;
+	font-size: 22px;
 	color: #FFF;
 	-webkit-text-stroke: 1.2px black;
 }
@@ -865,7 +859,7 @@ SECTION - TESTING
 ************************************************************************* */
 
 .testing {
-	margin-bottom: 30px;
+	margin-bottom: 40px;
 }
 
 .testing h2 {
@@ -885,7 +879,7 @@ SECTION - RAPID PROTOTYPING
 	align-items: center;
 }
 
-.prototype h3 {
+.prototyping h3 {
 	margin-bottom: 20px;
 }
 
